Fix output wrap and buttons

--- a/client/style.css
+++ b/client/style.css
@@ -14,6 +14,7 @@ code {
   padding: 0.5em;
   font-family: 'Fira Code', 'Fira Mono', monospace;
   font-size: 13px;
+  word-wrap: break-word;
   border: 1px solid #1b5e20;
   background: #c8e6c9;
   margin-bottom: 1em;
@@ -67,8 +68,6 @@ button:hover {
 .buttons {
   display: flex;
   flex-direction: column;
-
-  align-items: center;
 }
 .buttons > div {
   margin-bottom: 1em;
@@ -76,13 +75,23 @@ button:hover {
 .buttons > div:last-child {
   margin-bottom: 0;
 }
-@media (min-width: 500px) {
+.buttons button {
+  width: 100%;
+}
+@media (min-width: 350px) {
   .buttons {
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
   }
   .buttons > div {
-    margin-bottom: 0;
+    flex: 1;
+    margin: 0 0.5em;
+  }
+  .buttons > div:first-child {
+    margin-left: 0;
+  }
+  .buttons > div:last-child {
+    margin-right: 0;
   }
 }
 
